--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pug game</title>
 </head>
-<body>
-    <canvas id="gameView"></canvas>
+<body style="overflow: hidden;">
     <script src="dist/main.js"></script>
 </body>
 </html>
