--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pug game</title>
+    <link rel="icon" href="/src/sprites/paw.png"></link>
 </head>
 <body style="overflow: hidden;">
     <script src="dist/main.js"></script>
