--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pug game</title>
+    <link id="favicon" rel="icon" href="src/sprites/paw.png" type="image/x-icon">
+    <title>KIWI</title>
 </head>
 <body style="overflow: hidden;">
     <script src="dist/main.js"></script>
